// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fileDestinationUrl API #int POST /api/fileDestinationUrl should return an S3 URL when passed the proper parameters 1`] = `
Object {
  "destinationUrl": "https://permanent-tests.s3.amazonaws.com/my_example_path/example.png",
}
`;

exports[`fileDestinationUrl API #int POST /api/fileDestinationUrl should specify all validation details when passed a negative maxSize 1`] = `
Object {
  "error": Object {
    "_original": Object {
      "maxSize": -1,
    },
    "details": Array [
      Object {
        "context": Object {
          "key": "bucket",
          "label": "bucket",
        },
        "message": "\\"bucket\\" is required",
        "path": Array [
          "bucket",
        ],
        "type": "any.required",
      },
      Object {
        "context": Object {
          "key": "fileType",
          "label": "fileType",
        },
        "message": "\\"fileType\\" is required",
        "path": Array [
          "fileType",
        ],
        "type": "any.required",
      },
      Object {
        "context": Object {
          "key": "maxSize",
          "label": "maxSize",
          "limit": 1,
          "value": -1,
        },
        "message": "\\"maxSize\\" must be greater than or equal to 1",
        "path": Array [
          "maxSize",
        ],
        "type": "number.min",
      },
    ],
  },
}
`;

exports[`fileDestinationUrl API #int POST /api/fileDestinationUrl should specify all validation details when passed no parameters 1`] = `
Object {
  "error": Object {
    "_original": Object {},
    "details": Array [
      Object {
        "context": Object {
          "key": "bucket",
          "label": "bucket",
        },
        "message": "\\"bucket\\" is required",
        "path": Array [
          "bucket",
        ],
        "type": "any.required",
      },
      Object {
        "context": Object {
          "key": "fileType",
          "label": "fileType",
        },
        "message": "\\"fileType\\" is required",
        "path": Array [
          "fileType",
        ],
        "type": "any.required",
      },
      Object {
        "context": Object {
          "key": "maxSize",
          "label": "maxSize",
        },
        "message": "\\"maxSize\\" is required",
        "path": Array [
          "maxSize",
        ],
        "type": "any.required",
      },
    ],
  },
}
`;
